syntax = "proto3";

import "google/api/annotations.proto";

package pwnedpasswords;

message ListRequest {
    string hashPrefix = 1;
}

message PasswordHash {
    bytes hash = 1;
}

service PwnedPasswords {
    rpc ListHashesForPrefix(ListRequest) returns (stream PasswordHash) {
        option (google.api.http) = {
            get: "/v1/hashes/{hashPrefix}/list"
        };
    }
}
